--- a/WebApp/Components/CustomerWidgetComponent.razor
+++ b/WebApp/Components/CustomerWidgetComponent.razor
@@ -1,18 +1,19 @@
 ﻿@inject NavigationManager NavigationManager
-@*Customer*@
+
 @inject IViewCustomersUseCase ViewCustomersUseCase
 @inject IDeleteCustomerUseCase DeleteCustomerUseCase
-@*OrderCustomer*@
+@inject IGetCustomerByIdUseCase GetCustomerByIdUseCase
+
 @inject IViewOrderCustomersUseCase ViewOrderCustomersUseCase
 @inject IDeleteOrderCustomerUseCase DeleteOrderCustomerUseCase
-@*ItemOrder*@
+
 @inject IViewItemOrdersUseCase ViewItemOrdersUseCase
 @inject IDeleteItemOrderUseCase DeleteItemOrderUseCase
 @inject IGetItemOrderByIdUseCase GetItemOrderByIdUseCase
 @inject IEditItemOrderUseCase EditItemOrderUseCase
-@*Product*@
+
 @inject IGetProductByIdUseCase GetProductByIdUseCase
-@*OrderVendor*@
+
 @inject IGetOrderVendorByIdUseCase GetOrderVendorByIdUseCase 
 
 @using WebApp.Components
@@ -81,8 +82,11 @@
                     <table class="table table-hover table-sm align-middle">
                         <thead>
                             <tr>
-                                <th>Id</th>
-                                <th>Name</th>
+                                <th class="align-middle">№</th>
+                                <th class="align-middle">Клиент</th>
+                                <th class="align-middle">Дата<br/>редактирования</th>
+                                <th class="align-middle">Количество<br/>позиций</th>
+                                <th class="align-middle">Количество<br/>товаров</th>
                                 <th>
                                     <ButtonAddComponent TypeName="OrderCustomer"></ButtonAddComponent>
                                     <ButtonLoadComponent OnClickCallback="LoadOrderCustomers"></ButtonLoadComponent>
@@ -95,7 +99,10 @@
                             {
                                 <tr @onclick="@(() => ClickOrderCustomer(orderCustomer.OrderCustomerId))" style="cursor:pointer">
                                     <td>@orderCustomer.OrderCustomerId</td>
-                                    <td>@orderCustomer.Name</td>
+                                    <td>*Customer.Fullname</td>
+                                    <td>@orderCustomer.Edited</td>
+                                    <td>*ItemOrder.CountItem</td>
+                                    <td>*ItemOrder.CountProduct</td>
                                     <td>
                                         <button tupe="button" @onclick="@(() => ClickOrderCustomer(orderCustomer.OrderCustomerId))" class="btn btn-link">
                                             <i class="fas fa-eye"></i>
