--- a/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
+++ b/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
@@ -16,9 +16,9 @@
                 <tr>
                     <th>№</th>
                     <th>Клиент</th>
-                    <th>Дата редактирования</th>
-                    <th>Количество позиций</th>
-                    <th>Количество товаров</th>
+                    <th>Дата<br/>редактирования</th>
+                    <th>Кол-во<br/>позиций</th>
+                    <th>Кол-во<br/>товаров</th>
                     <th>Файл</th>
                     <th>Описание</th> 
                     <th></th>
