--- a/WebApp/Pages/Customer/CustomersComponent.razor
+++ b/WebApp/Pages/Customer/CustomersComponent.razor
@@ -11,7 +11,7 @@
 
 @if(customers != null)
 {
-        <table class="table" id="myTable">
+        <table class="table table-responsive" id="myTable">
             <thead>
                 <tr>
                     <th>№</th>
