--- a/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
+++ b/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
@@ -11,7 +11,7 @@
 
 @if(orderCustomers != null)
 {
-        <table class="table table-sm align-middle">
+        <table class="table table-sm align-middle table-responsive">
             <thead>
                 <tr>
                     <th>№</th>
