--- a/WebApp/Pages/OrderVendor/OrderVendorComponent.razor
+++ b/WebApp/Pages/OrderVendor/OrderVendorComponent.razor
@@ -6,14 +6,14 @@
 @inject IGetVendorByIdUseCase GetVendorByIdUseCase
 @inject IGetExcelFileByIdUseCase GetExcelFileByIdUseCase 
 
-<h3>Manage OrderVendors</h3>
+<h3>Заказы поставщиков</h3>
 
 @if(orderVendors != null)
 {
-        <table class="table" id="myTable">
+        <table class="table table-responsive" id="myTable">
             <thead>
                 <tr>
-                    <th>Name</th>
+                    <th>№</th>
                     <th>Description</th>
                     <th>Vendor</th>
                     <th>File</th>
@@ -24,7 +24,7 @@
                 @foreach(var orderVendor in orderVendors)
                 {
                     <tr>
-                        <td>@orderVendor.Name</td>
+                        <td>@orderVendor.OrderVendorId</td>
                         <td>@orderVendor.Description</td>
                         <td>@GetVendorByIdUseCase.Execute(orderVendor.VendorId)?.Name</td>
                         <td>
@@ -33,15 +33,15 @@
                             </a>
                         </td>
                         <td>
-                            <button tupe="button" @onclick="@(() => EditOrderVendor(orderVendor))" class="btn btn-light">Edit</button>
-                            <button tupe="button" @onclick="@(() => DeleteOrderVendor(orderVendor.OrderVendorId))" class="btn btn-light">Delete</button>
+                            <button tupe="button" @onclick="@(() => EditOrderVendor(orderVendor))" class="btn btn-light">Редактировать</button>
+                            <button tupe="button" @onclick="@(() => DeleteOrderVendor(orderVendor.OrderVendorId))" class="btn btn-light">Удалить</button>
                         </td>
                     </tr>
                 }
             </tbody>
         </table>
         <br/>
-        <button type="button" @onclick="OnClickAddOrderVendor" class="btn btn-primary">Add OrderVendor</button>
+        <button type="button" @onclick="OnClickAddOrderVendor" class="btn btn-primary">Добавить</button>
 }
 
 @code {
