--- a/WebApp/Pages/Product/ProductComponent.razor
+++ b/WebApp/Pages/Product/ProductComponent.razor
@@ -10,14 +10,15 @@
 @if(products != null)
 {
     <div class="table-responsive">
-        <table class="table table-hover table-sm align-middle" id="myTable">
+        <table class="table table-hover table-sm align-middle table-responsive" id="myTable">
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Category</th>
-                    <th>Price</th>
-                    <th>Quantity</th>
+                    <th>№</th>
+                    <th>Товар</th>
+                    <th>Описание</th>
+                    <th>Категория</th>
+                    <th>Цена</th>
+                    <th>Количество</th>
                     <th></th>
                 </tr>
             </thead>
@@ -31,8 +32,8 @@
                         <td>@(Math.Round(product.Price, 2))</td>
                         <td>@product.Quantity</td>
                         <td>
-                            <button tupe="button" @onclick="@(() => EditProduct(product))" class="btn btn-light">Edit</button>
-                            <button tupe="button" @onclick="@(() => DeleteProduct(product.ProductId))" class="btn btn-light">Delete</button>
+                            <button tupe="button" @onclick="@(() => EditProduct(product))" class="btn btn-light">Редактировать</button>
+                            <button tupe="button" @onclick="@(() => DeleteProduct(product.ProductId))" class="btn btn-light">Удалить</button>
                         </td>
                     </tr>
                 }
@@ -40,7 +41,7 @@
         </table>
         </div>
         <br/>
-        <button type="button" @onclick="OnClickAddProduct" class="btn btn-primary">Add Product</button>
+        <button type="button" @onclick="OnClickAddProduct" class="btn btn-primary">Добавить</button>
 }
 
 @code {
