--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -48,3 +48,50 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.text-align-center {
+    text-align: center;
+}
+
+.optix-font {
+    font-family: 'Literata', serif;
+    /*font-family: "Literata script=latin rev=2";*/
+    font-weight: 400;
+    font-style: normal;
+    line-height: initial;
+}
+
+.widget-column-border {
+    border-radius: 10px;
+}
+
+h4.mx-auto {
+    width: 100%;
+    text-align: center;
+    font-weight: 500;
+}
+
+.optix-page-title {
+    font-weight: 500;
+    margin-left: 20px;
+}
+
+.optix-row-1 {
+    /*background-color:#eee;*/
+}
+
+.optix-row-2 {
+    /*background-color:#ddd;*/
+}
+
+.optix-widget-title {
+    float: left;
+    width: 100%;
+}
+
+.widget-header {
+}
